# Portal_StillAlive_Rust

./: .gitignore  Cargo.toml  README.md  still_alive_credit.py
.github/workflows/: rust.yml
old_Python/: still_alive_credit.py
src/: data.rs  main.rs  tui_draw.rs
src/tui_draw/: mod.rs
