[package]
name = "Portal_StillAlive_Rust"
version = "0.9.8"
edition = "2021"

[features]
audio = []
[target.'cfg(target_os = "linux")'.dependencies]
cpal = { version = "0.16.0", default-features = false }

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = { version = "0.16.0", default-features = false }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.29.0"
rodio = "0.20.1"
ctrlc = "3.0"
